tests/reference/asr-test_set_object4-243eb04.stderr
semantic error: Unhashable type: 'list'
 --> tests/errors/test_set_object4.py:2:12
  |
2 |     print({[1, 2], [3, 4]})
  |            ^^^^^^ Mutable type 'list' cannot be stored in a set.
